# genforge

./: .gitignore  CITATION.cff  LICENSE  README.md  install.sh  mkdocs.yml  pyproject.toml
docs/: architecture.md  examples.md  experiments.md  extending.md  index.md  installation.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
envs/: __init__.py
envs/common/: __init__.py  dataset.py
envs/discrete_toy/: __init__.py  environment.py  processor.py
envs/distributions/: __init__.py  environment.py  processor.py
envs/robotics/: __init__.py  trajectory_window.py
envs/robotics/hf_lowdim/: __init__.py  adapter.py
envs/robotics/locomotion/: __init__.py  adapter_d4rl.py  adapter_minari.py  normalize.py
envs/robotics/maze2d/: __init__.py  adapter.py
envs/robotics/robomimic/: __init__.py  adapter.py
envs/text/: __init__.py  render.py
envs/text/ar/: __init__.py  components.py  dataset.py  environment.py  visualize.py
envs/text/char/: __init__.py  environment.py  processor.py
envs/text/tinystories/: __init__.py  environment.py  processor.py
envs/trajectory_synth/: __init__.py  dataset.py  environment.py  processor.py
examples/: README.md  __init__.py  custom_model_and_method.py  model_method_custom.py
examples/control/: __init__.py  cbf.py  fbsde_control.py  guidance.py  projection.py  value_guidance.py
examples/costs/: __init__.py  ball.py  barrier.py  box.py  halfspace.py  likelihood.py  reward.py
examples/methods/: __init__.py  conditional.py  d3pm.py  fbsde.py  flow_matching.py  mdlm.py  ot_cfm.py  sedd.py  value_training.py
examples/metrics/: __init__.py  coverage.py  distribution.py  likelihood.py
examples/models/: __init__.py  categorical.py  temporal_unet.py  temporal_unet_janner.py  transformer.py  value.py
examples/runners/: __init__.py  planning.py  policy_training.py  value_training.py
examples/samplers/: __init__.py  ddim.py  flow.py  interpolant.py  sedd.py  tau_leaping.py
examples/schedules/: __init__.py  discrete.py  flow.py
examples/spaces/: __init__.py  discrete.py
examples/visualizations/: __init__.py  trajectory.py
experiment/discrete/d3pm/: base.yaml
experiment/distributions/ddim/: base.yaml
experiment/distributions/ddpm/: base.yaml  halfspace_cbf.yaml  halfspace_guide.yaml  halfspace_project.yaml  huber.yaml  standardize.yaml
experiment/distributions/flow/: base.yaml
experiment/distributions/interpolant/: base.yaml
experiment/distributions/value/: guided.yaml  values.yaml
experiment/robotics/: tierb_base.yaml
experiment/robotics/aloha/: ddpm.yaml
experiment/robotics/locomotion/: __init__.py  attention_unet.py  base.yaml  guided_planning.py  value_unet.py
experiment/robotics/locomotion/halfcheetah/: ddpm.yaml
experiment/robotics/locomotion/hopper/: attention_ddpm.yaml  ddpm.yaml
experiment/robotics/locomotion/walker2d/: attention_ddpm.yaml  ddpm.yaml
experiment/robotics/maze2d/: base.yaml
experiment/robotics/maze2d/large/: ddpm.yaml
experiment/robotics/maze2d/medium/: ddpm.yaml
experiment/robotics/maze2d/umaze/: ddpm.yaml
experiment/robotics/pusht/: ddpm.yaml
experiment/robotics/robomimic/: base.yaml
experiment/robotics/robomimic/can/: ddpm.yaml
experiment/robotics/robomimic/lift/: ddpm.yaml
experiment/robotics/vision/: __init__.py  can_image_ddpm.yaml  lift_image_ddpm.yaml  pusht_image_ddpm.yaml  vision_unet.py
experiment/text/ar/: base.yaml
experiment/text/char/d3pm/: base.yaml  finetune.yaml  small.yaml
experiment/text/char/mdlm/: base.yaml  small.yaml  timeless.yaml
experiment/text/char/sedd/: base.yaml  small.yaml
experiment/text/tinystories/d3pm/: small.yaml
experiment/text/tinystories/mdlm/: small.yaml
experiment/text/tinystories/sedd/: small.yaml
experiment/trajectory/plan/: base.yaml
src/forge/: __init__.py  cli.py  nn.py
src/forge/configs/: config.yaml
src/forge/configs/control/: .gitkeep  cbf.yaml  fbsde_control.yaml  guidance.yaml  projection.yaml  value_guidance.yaml
src/forge/configs/cost/: .gitkeep  barrier.yaml  halfspace.yaml  reward.yaml
src/forge/configs/criterion/: huber.yaml  mse.yaml
src/forge/configs/dataset/: .gitkeep
src/forge/configs/environment/: .gitkeep
src/forge/configs/method/: .gitkeep  conditional.yaml  d3pm.yaml  ddpm.yaml  ddpm_huber.yaml  fbsde.yaml  flow_matching.yaml  mdlm.yaml  ot_cfm.yaml  sedd.yaml  value_training.yaml
src/forge/configs/metric/: distribution_set.yaml  energy.yaml  mmd.yaml  mode_coverage.yaml  perplexity.yaml  val_loss.yaml  w2.yaml
src/forge/configs/model/: .gitkeep  categorical_mlp.yaml  mlp.yaml  temporal_unet.yaml  temporal_unet_janner.yaml  transformer.yaml  (+1 more)
src/forge/control/: __init__.py  cbf.py  fbsde_control.py  guidance.py  projection.py  value_guidance.py
src/forge/core/: __init__.py  builder.py  checkpoint.py  compose.py  conditioning.py  interfaces.py  plugins.py  protocols.py  registry.py  resolvers.py  types.py
src/forge/costs/: __init__.py  ball.py  barrier.py  box.py  halfspace.py  likelihood.py  reward.py
src/forge/datasets/: __init__.py
src/forge/environments/: __init__.py
src/forge/methods/: __init__.py  conditional.py  criterion.py  d3pm.py  ddpm.py  ddpm_huber.py  fbsde.py  flow_matching.py  mdlm.py  ot_cfm.py  sedd.py  value_training.py
src/forge/metrics/: __init__.py  coverage.py  distribution.py  likelihood.py  metric_set.py
src/forge/models/: __init__.py  categorical.py  mlp.py  temporal_unet.py  temporal_unet_janner.py  transformer.py  value.py
src/forge/preprocessing/: __init__.py  minmax.py  standardize.py
src/forge/runners/: __init__.py  multistep.py  planning.py  policy_training.py  training.py  value_training.py
src/forge/samplers/: __init__.py  ddim.py  ddpm.py  flow.py  interpolant.py  sedd.py  tau_leaping.py
src/forge/schedules/: __init__.py  discrete.py  flow.py  vp.py
src/forge/spaces/: __init__.py  discrete.py  euclidean.py
src/forge/utils/: __init__.py  ema.py  logging.py  lora.py  persistence.py  seeding.py  torch_utils.py
src/forge/visualizations/: __init__.py  env_render.py  scatter.py  trajectory.py
(+28 files in other folders)
